18. Добавлены новые компоненты: Diologs, MyPosts, Post. Добавлены стили модули.

--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/App.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/App.css
@@ -10,21 +10,8 @@
   /* grid-gap: 10px; */
 }
 
-.header {
-  grid-area: h;
-  background-color: green;
+.app-wrapper-content {
+    background-color: blue;
+    grid-area: c;
 }
 
-.header img {
-  width: 60px;
-}
-
-.nav {
-  background-color: red;
-  grid-area: n;
-}
-
-.content {
-  background-color: blue;
-  grid-area: c;
-}
