22. Добавлены Route маршрутизаторы, дополняю компонент Message

--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/App.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/App.css
@@ -6,12 +6,12 @@
   "h h"
   "n c";
   grid-template-rows: 60px 1fr; 
-  grid-template-columns: 1fr 10fr;
+  grid-template-columns: 2fr 10fr;
   /* grid-gap: 10px; */
 }
 
 .app-wrapper-content {
-    background-color: blue;
+    background-color: #3463;
     grid-area: c;
 }
 
