--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Navbar/Navbar.module.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Navbar/Navbar.module.css
@@ -1,8 +1,12 @@
 .nav {
-    background-color: red;
+    background-color: pink;
     grid-area: n;
+    padding: 15px;
 }
 
 .item {
+    text-decoration: none;
+    color: white;
+    padding: 10px;
     color: white;
 }
