--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Dialogs/Dialogs.module.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Dialogs/Dialogs.module.css
@@ -15,3 +15,17 @@
     padding: 10px;
 }
 
+.message {
+    padding: 7px;
+}
+
+.ava {
+    width: 30px;
+    height: 30px;
+}
+
+.text {
+    padding: 10px;
+    display: inline;
+}
+
