--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Dialogs/Dialogs.module.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Dialogs/Dialogs.module.css
@@ -7,8 +7,12 @@
     padding: 10px;
 }
 
-.dialogsItems .active {
-    color: gold;
+.dialogsItem {
+    text-decoration: none;
+}
+
+.activeDialogItem {
+    color: chocolate;
 }
 
 .messages {
