--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Navbar/Navbar.module.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Navbar/Navbar.module.css
@@ -8,5 +8,9 @@
     text-decoration: none;
     color: white;
     padding: 10px;
-    color: white;
+}
+
+.activeLink {
+    text-decoration: none;
+    color: brown;
 }
