--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Profile/MyPosts/ProfileInfo/ProfileInfo.module.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Profile/MyPosts/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,12 @@
 .descriptionInfo {
     padding: 10px;
 }
+
+.profileName {
+    font-weight: bold;
+}
+
+.photo {
+    width: 200px;
+    height: 200px;
+}
