--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Header/Header.module.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Header/Header.module.css
@@ -6,3 +6,12 @@
 .header img {
     width: 60px;
 }
+
+.authName {
+  float: right;
+}
+
+.authName a {
+  text-decoration: none;
+  color: black;
+}
