--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Users/Users.module.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/Components/Users/Users.module.css
@@ -6,3 +6,13 @@
     width: 50px;
     height: 50px;
 }
+
+.pages {
+    margin: 5px;
+}
+
+.selectedPage {
+    font-weight: bold;
+    color: blue;
+    cursor: pointer;
+}
