--- a/react-kabzda/projects/01-first-project/react-kabzda-1/src/common/Pagination/Pagination.module.css
+++ b/react-kabzda/projects/01-first-project/react-kabzda-1/src/common/Pagination/Pagination.module.css
@@ -1,9 +1,18 @@
+.paginator {
+    margin: 10px;
+}
+
+.pageNumber {
+    padding: 2px;
+    border: 1px solid grey;
+}
+
 .pages {
     margin: 5px;
 }
 
-.selectedPage {
+.pageNumber.selectedPage {
     font-weight: bold;
-    color: blue;
     cursor: pointer;
+    border: 2px solid black;
 }
